--- a/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
+++ b/Papers/WUT-Master-Thesis/Grabski-Adam-Magisterska.tex
@@ -98,7 +98,8 @@ C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wpro
 \input{tex/7-wnioski}
 \newpage
 \input{tex/8-dalsza.tex}
-
+\newpage
+\input{tex/10-closing.tex}
 
 
 %--------------------------------------------
