--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -450,6 +450,9 @@ institution = {ECMA (European Association for Standardizing Information and Comm
     howpublished = "Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}",
     year         = "2015"
 }
+
+ @misc{grabski:aergia, title={Agrabski/Aergia: A preprocessor for C++ providing static reflection capabilites}, url={https://github.com/Agrabski/Aergia}, journal={GitHub}, author={Grabski, Adam}} 
+
 @article{kemper1995swizzling,
   title={Adaptable pointer swizzling strategies in object bases: Design, realization, and quantitative analysis},
   author={Kemper, Alfons and Kossmann, Donald},
