--- a/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
+++ b/Papers/WUT-Master-Thesis/tex/8-dalsza.tex
@@ -20,7 +20,7 @@ Oznacza to, że programista pracujący nad biblioteką A ma obecnie następując
 \begin{enumerate}
 	\item\label{option:abandon_attribute} Porzucenie atrybutu \lstinline{const} i dalszą pracę bez analizy statycznej.
 	\item\label{option:embed_in_attribute} Zaszycie które elementy biblioteki standardowej powinny mieć tą adnotację w kodzie atrybutu.
-	\item\label{option:std_library_fascade} Stworzenie 'nakładki' na bibliotekę standardową.%todo: lepsze słowo% 
+	\item\label{option:std_library_fascade} Stworzenie 'nakładki' na bibliotekę standardową.
 	\item\label{option:analize_function_bodies} Implementacja atrybutu w taki sposób aby analizował też ciała wołanych funkcji.
 	\item\label{option:own_std_lib} Implementacja własnej biblioteki standardowej.
 \end{enumerate}
