--- a/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
+++ b/Papers/WUT-Master-Thesis/tex/3-projekt-jezyka.tex
@@ -1,7 +1,7 @@
 \section{Projekt języka}
 \label{Language_desig}
 
-Język C-=-1 w przeciwieństwie do większości współczesnych języków programowania jest oparty na udostępnieniu programiście struktur danych tworzonych przez kompilator. Deskryptory typów, funkcji, przestrzeni nazw oraz enumeratorów, razem z reprezentacją pośrednią kodu są udokumentowaną częścią języka (załącznik nr 1).
+Język C-=-1 w przeciwieństwie do większości współczesnych języków programowania jest oparty na udostępnieniu programiście struktur danych tworzonych przez kompilator. Deskryptory typów, funkcji, przestrzeni nazw oraz enumeratorów, razem z reprezentacją pośrednią kodu są udokumentowaną częścią języka (załącznik nr 2).
 Aby umożliwić użytkownikowi wykorzystanie tych struktur danych, C-=-1 musi zapewnić sposób na napisanie kodu wykonywanego w czasie kompilacji, który może nimi manipulować. W tym celu postanowiono rozszerzyć koncepcję atrybutu, aby umożliwić inspekcję i modyfikację reprezentacji pośredniej.
 C-=-1 został zaprojektowany na bazie założeń C++. Obydwa te języki są statycznie typowane, kompilowane oraz nie wymagają specjalnego środowiska uruchomieniowego.
 Przy projektowaniu C-=-1 skorzystano jednak z doświadczeń wyciągniętych z C++ w aspektach takich jak dziedziczenie wielobazowe czy zarządzanie pamięcią. Obydwa zostały opisane odpowiednio w rozdziałach \ref{elementy_jezyka} oraz \ref{struktura_paczki}
@@ -9,7 +9,7 @@ Przy projektowaniu C-=-1 skorzystano jednak z doświadczeń wyciągniętych z C+
 \subsection{Składnia}
 
 Składnia języka C-=-1 została opisana używając języka definicji gramatyki narzędzia ANTLR \cite{antlr}, wzorowanego na EBNF \cite{ebnf}.
-Plik zawierający ten opis, znajduje się w repozytorium projektu, pod ścieżką \lstinline{Grammar\Revision0\CMinusEqualsMinus1Revision0.g4}, oraz w załączniku drugim.
+Plik zawierający ten opis, znajduje się w repozytorium projektu, pod ścieżką \lstinline{Grammar\Revision0\CMinusEqualsMinus1Revision0.g4}, oraz w załączniku pierwszym.
 
 Składnia C-=-1 czerpie inspiracje z języka Rust.
 Typy zmiennych, czy zwracane z funkcji są precyzowane używając notacji postfiksowej, na przykład \lstinline{let x : int = 0;} zamiast \lstinline{int x = 0;}.
@@ -57,6 +57,11 @@ W C-=-1, w przeciwieństwie do C++, pliki źródłowe są niezależne.
 \subsection{Elementy języka}
 \label{elementy_jezyka}
 
+Język C-=-1 bazuje na C++.
+Większość jego elementów składowych można przełożyć na ich ekwiwalenty w C++.
+C-=-1 zawiera jednak także atrybuty, które nie występują w innych językach.
+Zostały one opisane w rozdziale \ref{Attributes_definition}
+
 \subsubsection{Klasy}
 \label{classes_definition}
 Klasy w języku C-=-1 działają analogicznie do języków z rodziny C.
@@ -65,11 +70,9 @@ Wszystkie elementy takiego typu mogą mieć ograniczenia dostępu.
 Dwoma istotnymi elementami klas w C-=-1 są metody specjalne \lstinline{construct} oraz \lstinline{finalize}.
 Można je zrozumieć jako odpowiedniki konstruktora oraz destruktora z C++.
 Ponieważ C-=-1 w swojej obecnej formie nie ma wyjątków, nie gwarantuje wykonania destruktorów zmiennych lokalnych w wypadku nieoczekiwanego zakończenia programu.
+Listing \ref{lst:class_grammar} zawiera fragment składni C-=-1 wykorzystywany przy deklarowaniu typu.
+Klasy, interfejsy oraz struktury współdzielą składnię i są rozróżniane wyłącznie przez \lstinline{classTypeSpecifier}.
 
-Listing \ref{lst:class_grammar} zawiera fragment składni C-=-1 wykorzystywany przy deklarowaniu klasy.
-%todo: finish
-
-%todo: reference this
 \begin{minipage}{\linewidth}
   
 	\begin{lstlisting}[
@@ -246,7 +249,6 @@ W obecnej wersji C-=- istnieją następujące funkcję specjalne:
 		\item \lstinline{onReference}
 	\end{itemize}
 \end{itemize}
-%todo: more, this is an important part of the thesis
 Ponadto, każdy cel ma ze sobą powiązaną funkcję \lstinline{attach}.
 Ta procedura jest wywoływana, kiedy nagłówek obiektu został stworzony.
 Na przykład dla funkcji, dzieje się to kiedy kompilator zebrał jej nazwę, parametry oraz typ zwracany.
@@ -261,7 +263,7 @@ Proces wyboru przeciążenia funkcji w C-=-1, jest złożony i został dokładni
 \subsection{Reprezentacja pośrednia}\label{reprezentacja_posrednia}
 Programista C-=-1 może analizować oraz modyfikować reprezentację pośrednią swojego programu w czasie kompilacji.
 C-=-1 Intermidiate Representation, w skrócie CIR jest nieznacznie uproszczoną wersją języka, reprezentowaną jako struktura danych.
-Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 1.
+Użytkownik wchodzi w interakcje z CIR za pomocą zestawu interfejsów opisanych w załączniku 2.
 Wszystkie typy instrukcji oraz wyrażeń mają ze sobą powiązany konkretny typ.
 Wyjątkiem jest \lstinline{ScopeTerminationStatement}, który nie jest powiązany z żadną instrukcją pisaną przez użytkownika.
 Instrukcja zakończenia zakresu jest wstawiana przez kompilator na koniec każdej instrukcji złożonej i jest odpowiedzialna za wywołanie destruktorów zmiennych lokalnych (opisane w rozdziale \ref{classes_definition}).
