implementation and language comparison

--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -81,6 +81,13 @@ pages = {129–131},
 numpages = {3}
 }
 
+@article{wen2006analysis,
+  title={Analysis of C++ function overload implementation},
+  author={Wen-bo, ZHANG},
+  journal={Journal of Baoji University of Arts and Sciences (Natural Science Edition)},
+  pages={02},
+  year={2006}
+}
 
 @book{puntambekar:compiler_design,
   title={COMPILER DESIGN},
