--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -442,6 +442,21 @@ institution = {ECMA (European Association for Standardizing Information and Comm
     howpublished = "Dostęp zdalny (10.04.2019): \url{http://page.mi.fu-berlin.de/cbenzmueller/papers/C40.pdf}",
     year         = "2014",
 }
+@book{keselev2003aspect,
+  title={Aspect-oriented programming with AspectJ},
+  author={Keselev, Ivan},
+  year={2003},
+  publisher={Sams}
+}
+@article{vidal2019jpiaspectz,
+  title={JPIAspectZ: A Formal Requirement Specification Language for Joint Point Interface AOP Applications},
+  author={Vidal-Silva, CL and Madariaga, E and Pham, T and Johnson, F and Urzua, LA and Carter, Luis},
+  journal={Engineering, Technology \& Applied Science Research},
+  volume={9},
+  number={4},
+  pages={4338--4341},
+  year={2019}
+}
 
 % Raport techniczny.
 @techreport{duqu2011,
