--- a/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
+++ b/Papers/WUT-Master-Thesis/tex/5-porownanie-z-jezykami.tex
@@ -215,7 +215,7 @@ Tak więc w linii dziewiątej, wybierane jest przeciążenie nie-\lstinline{cons
   \end{lstlisting}
 \end{minipage}
 
-Zapewnienie właściwości \ref{prop:Generic_adnotations}, jest najtrudniejsze i wymaga dalej idącej pracy teorytycznej.
+Zapewnienie właściwości \ref{prop:Generic_adnotations} jest najtrudniejsze i wymaga dalej idącej pracy teoretycznej.
 Zaaplikowanie systemu atrybutów do implementacji modyfikatora \lstinline{const} oznacza śledzenie wartości, nie koniecznie pól, zmiennych, typów czy funkcji.
 Listing \ref{lst:const_problem_example} zawiera przykład problemu rozwiązywanego przez właściwość \ref{prop:Generic_adnotations}.
 W linii drugiej, deklarowana jest zmienna typu \lstinline{usize} z modyfikatorem \lstinline{const}.
